@@ -180,3 +180,4 @@ Revision	Log Message
 177		Don't bother mapping wastelands to wastelands
 178		Map CK2 religions to CK2 religion groups
 179		Map CK2 cultures to CK2 culture groups, then disallow wrong culture buildings
+180		Use basetax and manpower proxies to try to break ties in religion conversion
